Replaced badges with values

--- a/README.mustache
+++ b/README.mustache
@@ -59,7 +59,7 @@ List of maintainers for every adapter in iobroker-community-adapters
 | Adapter | Beta | Stable | Installed | Teststatus | Maintainer |
 |---------|------|--------|-----------|------------|------------|
 {{#adapters}}
-| [{{adapterName}}]({{{url}}}) | ![Beta](https://img.shields.io/npm/v/{{packageName}}.svg?color=red&label=beta) | ![Stable](http://iobroker.live/badges/{{adapterName}}-stable.svg) | ![Installed](http://iobroker.live/badges/{{adapterName}}-installed.svg) | ![Test&Release](https://github.com/iobroker-community-adapters/iobroker.{{adapterName}}/workflows/Test%20and%20Release/badge.svg) | {{{maintainer}}} |
+| [{{adapterName}}]({{{url}}}) | v{{version.beta}} | v{{version.stable}} | {{installations}} | ![Test&Release](https://github.com/iobroker-community-adapters/iobroker.{{adapterName}}/workflows/Test%20and%20Release/badge.svg) | {{{maintainer}}} |
 {{/adapters}}
 
 ----
