--- a/README.mustache
+++ b/README.mustache
@@ -61,7 +61,7 @@ List of maintainers for every adapter in iobroker-community-adapters
 | | Adapter | Beta | Stable | Installed | Teststatus | Maintainer |
 |-|---------|-----:|-------:|----------:|------------|------------|
 {{#adapters}}
-| <img src="{{{icon}}}" alt="{{title}}" width="25" /> | [{{adapterName}}]({{{url}}}) | v{{version.beta}} | v{{version.stable}} | {{installations}} | ![Test&Release](https://github.com/iobroker-community-adapters/iobroker.{{adapterName}}/workflows/Test%20and%20Release/badge.svg) | {{{maintainer}}} |
+| <img src="{{{icon}}}" alt="{{title}}" width="25" /> | [{{adapterName}}]({{{url}}}) | v{{version.beta}} | v{{version.stable}} | {{installations}} | ![Test&Release](https://github.com/iobroker-community-adapters/ioBroker.{{adapterName}}/actions/workflows/test-and-release.yml/badge.svg) | {{{maintainer}}} |
 {{/adapters}}
 
 ### Unlisted adapters
@@ -69,7 +69,7 @@ List of maintainers for every adapter in iobroker-community-adapters
 | Adapter | Teststatus | Maintainer |
 |---------|------------|------------|
 {{#adaptersUnlisted}}
-| [{{adapterName}}]({{{url}}}) | ![Test&Release](https://github.com/iobroker-community-adapters/iobroker.{{adapterName}}/workflows/Test%20and%20Release/badge.svg) | {{{maintainer}}} |
+| [{{adapterName}}]({{{url}}}) | ![Test&Release](https://github.com/iobroker-community-adapters/ioBroker.{{adapterName}}/actions/workflows/test-and-release.yml/badge.svg) | {{{maintainer}}} |
 {{/adaptersUnlisted}}
 
 ----
